# SIGS

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
baselines/hdtlgp/1d/: HeatDataset_patched.py  Tr_GPSRHeat_patched.py  evaluate_patched.py  local_optimize.py  run_1d_pde.py
baselines/hdtlgp/2d/: Dataset2D_patched.py  Tr_GPSR2D_patched.py  evaluate2D_patched.py  local_optimize.py  run_2d_pde.py
baselines/pinns/: burgers.py  diffusion.py  fem_poisson_gauss.py  pinn_poisson_gauss.py  wave.py
baselines/pinns/fbpinns/: analysis.py  constants.py  decompositions.py  decompositions_base.py  networks.py  plot_trainer.py  plot_trainer_1D.py  plot_trainer_2D.py  plot_trainer_3D.py  problems.py  schedulers.py  trainers.py  trainers_base.py  windows.py
baselines/pinns/fbpinns/util/: jax_util.py  multiprocess.py  other.py
configs/: config.yaml
data/: DOWNLOAD.md  clusters.pkl  expressions.h5  model.ckpt
docs/: algorithm.md  comparison_protocol.md  reproducibility.md
docs/blog/: sigs-neuro-symbolic-pde-solver.md
examples/: minimal_symbolic_core.py
notebooks/: demo_pdes.ipynb
problems/: __init__.py  compressible_euler.py  shallow_water.py
scripts/: discover.py  euler_search.py  optimize.py  plot_euler.py  run_euler_four_fields.py  run_euler_same_series.py  smoke_test.py
src/sigs/: __init__.py  decoder.py  encoder.py  evaluator.py  grammar.py  loss.py  model.py  sampler.py  stack.py  training.py  tree.py  utils.py
tests/: test_smoke.py
